# concepts-lighter

./: .clang_complete  CMakeLists.txt  LICENSE.txt  README.md  concepts.hpp  concepts_raja.hpp  example.cpp  metalib.hpp  preprocessor.hpp
include/: concepts.hpp
include/impl/: detector.hpp  metalib.hpp
